sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var ech: INT = 0
  while (ech == 0) {
  	for (i<- 0 to (getNombreValeurs()-2)) {
    	if (plusPetit(i+1, i)) {
      	echange(i,i+1); 
      } else {
        ech = ech + 1
      }
    }
  }
}